--- a/static/css/cover.css
+++ b/static/css/cover.css
@@ -29,6 +29,7 @@ body {
   height: 100%;
   /*background-color: #333;*/
   background-image: url("../images/wallpaper.jpg");
+  background-size: cover;
 }
 
 body {
