--- a/static/css/emailForm.css
+++ b/static/css/emailForm.css
@@ -159,11 +159,11 @@
 
 
 /* BUTTON DOWNLOAD PAGE */
-a.button6{
+.button6{
 	display:inline-block;
 	padding:0.7em 1.4em;
 margin:0 0.3em 0.3em 0;
-border-radius:3em;
+border-radius:2em;
 box-sizing: border-box;
 text-decoration:none;
 text-transform:uppercase;
@@ -174,13 +174,13 @@ box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
 text-align:center;
 position:relative;
 }
-a.button6:active{
+.button6:active{
 	top:0.2em;
 }
 
 
 @media all and (max-width:30em){
-a.button6{
+.button6{
 display:block;
 margin:0.4em auto;
 }
