--- a/static/css/emailForm.css
+++ b/static/css/emailForm.css
@@ -169,7 +169,7 @@ text-decoration:none;
 text-transform:uppercase;
 font-weight:400;
 color:#FFFFFF;
-background-color:#33dd84;
+background-color:#000000;
 box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.17);
 text-align:center;
 position:relative;
